--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "clsx": "^1.2.1",
+    "next": "13.1.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.56.0",
+    "zustand": "^4.3.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint-config-next": "^13.1.6",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "sass": "^1.58.0",
     "typescript": "4.9.4"
   }
 }
